validate anchor url and anchor hash is matching